--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/Resume_PIC.jpg" style="height: 130px;width: 150px; border-radius: 50%" alt="Nuruzzaman" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/Resume_PIC.jpg" style="height: 130px;width: 150px; border-radius: 50%" alt="Nawaz" />
             <div class="profile-content pull-left">
                 <h1 class="name">Md. Nawaz Shorif</h1>
                 <h2 class="desc">Web App Developer</h2>   
@@ -145,7 +145,7 @@
                     <li><a href="https://uhunt.onlinejudge.org/id/611948" target="_blank"><i class="fa fa-github-alt"></i></a></li>
                 </ul>
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="mailto:mr.nuruzzamancse@gmail.com" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            <a class="btn btn-cta-primary pull-right" href="mailto:mr.nawaz.cse.ruet@gmail.com" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
         </div><!--//container-->
     </header><!--//header-->
     
@@ -246,7 +246,7 @@
                                 <img class="img-responsive project-image" src="assets/images/projects/Address.JPG" alt="Online Address Book" id="myImg2"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://github.com/Nuruzzamancse/Address-Book" target="_blank">Online Contact Mangement</a></h3>
+                                    <h3 class="title"><a href="https://github.com/NawazShorif/Address-Book" target="_blank">Online Contact Mangement</a></h3>
                                     <!--<p>You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>-->
                                     <b>PHP & MySql</b>
                                     <p>
