--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/Resume_PIC.jpg" style="height: 130px;width: 150px; border-radius: 50%" alt="Nawaz" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/Resume_PIC.JPG" style="height: 130px;width: 150px; border-radius: 50%" alt="Nawaz" />
             <div class="profile-content pull-left">
                 <h1 class="name">Md. Nawaz Shorif</h1>
                 <h2 class="desc">Web App Developer</h2>   
