--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="item">
-                                    <h3 class="level-title">Angular, React & JavaScript<span class="level-label"></span></h3>
+                                    <h3 class="level-title">React & JavaScript<span class="level-label"></span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>                                      
@@ -383,7 +383,7 @@
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
                                 
-                                <p><a class="more-link" href="https://www.linkedin.com/in/md-nuruzzaman-nabwab-359261102/" target="_blank"><i class="fa fa-external-link"></i> More on Linkedin</a></p>
+                                <p><a class="more-link" href="https://www.linkedin.com/in/md-nawaz-shorif-mns-4b0b97b2/" target="_blank"><i class="fa fa-external-link"></i> More on Linkedin</a></p>
                             </div>              
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
@@ -415,8 +415,8 @@
                                 <!--<h4 class="university">University College London <span class="year">(2011-2012)</span></h4>-->
                             <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
                             <div class="item">
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc Computer Science</h3>
-                                <h4 class="university">University of Rajshahi <span class="year">(2014-2018)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science and Engineering </h3>
+                                <h4 class="university">Rajshahi University of Engineering & Technology <span class="year">(2013-2017)</span></h4>
                             </div><!--//item-->
 
                             <div class="item">
