--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 <p class="summary">It's a digital marketing project. Here customer  can send email ,sms , letter and fillup custom form </p>
                                 <div class="featured-image">
                                     <a href="https://app.mybizzmail.com/" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/bizzmail.png" alt="Ride Zone BD" />
+                                    <img class="img-responsive project-image" src="assets/images/bizzmail.png" alt="Bizzmail" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">Web App</div>
