--- a/index.html
+++ b/index.html
@@ -236,28 +236,14 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12">
-                                <img class="img-responsive project-image" src="assets/images/projects/Pharmacy.JPG" alt="Pharmacy Management" id="myImg"/>
+                                <img class="img-responsive project-image" src="assets/images/stoerlinnen.png" alt="Stoerlinnen" id="myImg"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://github.com/Nuruzzamancse/PMS" target="_blank">Pharmacy Management System.</a></h3>
-                                    <!--<p>You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>-->
+                                    <h3 class="title"><a href="https://configurator.stoerlinnen.nl/" target="_blank">Stoerlinnen</a></h3>
 
-                                    <b>Node.js & Angular</b>
-                                    <p>
-                                    <ul>
-                                        <li>To use the system users have to login as Admin/ Manager/ Pharmasist/ Salesman</li>
-
-                                        <li><b>Admin</b> can add/ edit/ delete manager, pharmasist, salesman. He/She can see out of stock medicines. </li>
-                                        <li><b>Manager</b> can only add pharmasist, salesman.</li>
-                                        <li><b>Pharmasist</b> can add & update medicines.</li>
-                                        <li><b>Salesman</b> can sale medicine , print add invoice, update stock/quantity.</li>
-                                        <li>Existing Users and Password:
-                                        <ul>
-                                            <li>User: <span style="color: #1735bc; font-family: 'Times New Roman'; font-size: 20px">admin</span>/ manager/ pharmasist/ salesman<br>Password: <span style="color: #bc2e91; font-family: 'Times New Roman'; font-size: 20px">123456</span></li>
-                                        </ul></li>
-                                    </ul>
-
-                                    <!-- <p><a class="more-link" href="http://pharmacy.cleverapps.io" target="_blank"><i class="fa fa-external-link"></i> Live App</a></p> -->
+                                    <b>PHP, jQuery, AJAX & mySQl</b>
+                                    <p> This project has two part <a href="https://configurator.stoerlinnen.nl/" target="_blank"><b>Frontend</b></a> & <a href="https://configurator.stoerlinnen.nl/dashboard" target="_blank"><b>Backend</b></a>.<br><ul><li> Frontend : we can select many kind linen and sent order for this to admin.</li><li>Backend: After login backend , It can manage all order and send corresponding  feedback to the customer. </li><li> In backend Here is strong portal permission system</li></ul>
+                                    </p>
 
                                 </div>
 
@@ -298,65 +284,6 @@
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
-                <!---->
-                <!--<section class="projects section">-->
-                    <!--<div class="section-inner">-->
-                        <!--<h2 class="heading">Other Projects</h2>-->
-                        <!--<div class="content">-->
-                            <!--<div class="item">-->
-                                <!--<h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>-->
-                                <!--<p class="summary">Provide a brief description of your project. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatu.</p>-->
-                                <!--<p><a class="more-link" href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>-->
-                            <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
-                            <!--<div class="item">-->
-                                <!--<h3 class="title"><a href="#">Project Title Cras eget lacus</a> <span class="label label-theme">Open Source</span></h3>-->
-                                <!--<p class="summary">Provide a brief description of your project. Maecenas ornare ultricies risus, in fermentum augue consectetur in. Vestibulum vitae mauris iaculis, sollicitudin velit in, molestie nulla. </p>-->
-                                <!--<p><a class="more-link" href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>-->
-                            <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
-                            <!--<div class="item">-->
-                                <!--<h3 class="title"><a href="#">Project Title Maecenas Ornare</a> <span class="label label-theme">Open Source</span></h3>-->
-                                <!--<p class="summary">Provide a brief description of your project. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel purus enim. Etiam tortor felis, fermentum ac ultrices sed.</p>-->
-                                <!--<p><a class="more-link" href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>-->
-                            <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
-                            <!---->
-                            <!--<a class="btn btn-cta-secondary" href="#">More on CoderWall <i class="fa fa-chevron-right"></i></a>-->
-                            <!---->
-                        <!--</div>&lt;!&ndash;//content&ndash;&gt;  -->
-                    <!--</div>&lt;!&ndash;//section-inner&ndash;&gt;                 -->
-                <!--</section>&lt;!&ndash;//section&ndash;&gt;-->
-                <!---->
-                <!--<section class="experience section">-->
-                    <!--<div class="section-inner">-->
-                        <!--<h2 class="heading">Work Experience</h2>-->
-                        <!--<div class="content">-->
-                            <!--<div class="item">-->
-                                <!--<h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>-->
-                                <!--<p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>-->
-                            <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
-                            <!--<div class="item">-->
-                                <!--<h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>-->
-                                <!--<p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>-->
-                            <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
-                            <!---->
-                            <!--<div class="item">-->
-                                <!--<h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>-->
-                                <!--<p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>-->
-                            <!--</div>&lt;!&ndash;//item&ndash;&gt;-->
-                            <!---->
-                        <!--</div>&lt;!&ndash;//content&ndash;&gt;  -->
-                    <!--</div>&lt;!&ndash;//section-inner&ndash;&gt;                 -->
-                <!--</section>&lt;!&ndash;//section&ndash;&gt;-->
-                <!--<section class="github section">-->
-                    <!--<div class="section-inner">-->
-                        <!--<h2 class="heading">My GitHub</h2>-->
-                        <!--<p>You can embed your GitHub activities using Casey Scarborough's <a href="http://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget. You can also take a screenshot of your GitHub chart and put it here for fun.</p>-->
-                        <!--<p><a href="#"><img class="img-responsive" src="assets/images/github-chart.png" alt="GitHub Contributions Chart" /></a></p>               -->
-                        <!--&lt;!&ndash;//Usage: http://caseyscarborough.com/projects/github-activity/ &ndash;&gt;                       -->
-                        <!--<div id="ghfeed" class="ghfeed">-->
-                        <!--</div>&lt;!&ndash;//ghfeed&ndash;&gt;-->
-                        <!---->
-                    <!--</div>&lt;!&ndash;//secton-inner&ndash;&gt;-->
-                <!--</section>&lt;!&ndash;//section&ndash;&gt;-->
             </div><!--//primary-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
