--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <p><a class="more-link" href="https://portal.vanhem.nl/" target="_blank"><i class="fa fa-external-link"></i> View on Live</a></p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="https://wellworkdashboard.bgwadvies.nl/" style="color: #005cbf" target="_blank">BGW</a>
+                                <h3 class="title"><a href="https://wellworkdashboard.bgwadvies.nl/" style="color: #005cbf" target="_blank">BGW</a></h3>
                                 
                                 <b>PHP, MySQL , jQuery & AJAX</b>
                                 <p>This is a Real time chat Application. Developed in Node.js & Express  using Socket.io</p>
