--- a/index.html
+++ b/index.html
@@ -443,9 +443,17 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                                I am MEAN Stack Developer.I can also work in PHP and MySQL</p>
+                                I am Full Stack Developer.I can also work in PHP and MySQL</p>
                             <div class="skillset">
 
+                                <div class="item">
+                                    <h3 class="level-title">React, JavaScript &  Typescript <span class="level-label"></span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="96%">
+                                        </div>
+                                    </div>
+                                    <!--//level-bar-->
+                                </div>
                                 <div class="item">
                                     <h3 class="level-title">Node.js, MongoDB &amp; Express<span class="level-label"
                                             data-toggle="tooltip" data-placement="left" data-animation="true"></span>
@@ -458,14 +466,6 @@
                                 </div>
                                 <!--//item-->
 
-                                <div class="item">
-                                    <h3 class="level-title">React & JavaScript<span class="level-label"></span></h3>
-                                    <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="96%">
-                                        </div>
-                                    </div>
-                                    <!--//level-bar-->
-                                </div>
                                 <!--//item-->
 
                                 <div class="item">
