--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
             transition: 0.3s;
         }
 
+        .profile-list{
+            padding-left: 10px;
+            margin-bottom: 20px;
+        }
+
         .close:hover,
         .close:focus {
             color: #bbb;
@@ -156,10 +161,10 @@
                 style="height: 130px;width: 150px; border-radius: 50%" alt="Nawaz" />
             <div class="profile-content pull-left">
                 <h1 class="name">Md. Nawaz Shorif</h1>
-                <h2 class="desc">Web App Developer</h2>
+                <h2 class="desc">Full Stack Web Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="https://github.com/NawazShorif" target="_blank"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/md-nawaz-shorif-4b0b97b2/" target="_blank"><i
+                    <li><a href="https://www.linkedin.com/in/nawazcse/" target="_blank"><i
                                 class="fa fa-linkedin"></i></a></li>
                     <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
                     <li><a href="https://uhunt.onlinejudge.org/id/611948" target="_blank"><i
@@ -181,15 +186,23 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a self-motivated and passionate web developer.<br> I want to exploit my skills to
-                                accomplish the challenging position in the Software Industry and fulfilling
-                                organizational goals. I can learn new technology very quickly.</p>
-                            <p>I have also two months of <b>proffesional experience</b> on Node.js , React and MySQL.
-                            </p>
+                           <p> 5+ years experience in web software development. Expert in front-end web and desktop application (electorn js)development in Javascript/reactjs/node/html5/css/scss platforms. Disciplined approach to testing, quality assurance, and operational concerns. Strong commitment to software development best practices and code quality. </p>
+                           <ul class="profile-list list-unstyled">
+                            <li>✓ Strong problem solving and coding skills</li>
+                            <li>✓ Played frontend team lead role & flow agile process(Max team size 12 engineer)</li>
+                            <li>✓ Development experience in Javascript, React, Next.Js, Electron etc</li>
+                            <li>✓ Designing and developing highly available and scalable front-end systems</li>
+                            <li>✓ Experience with software engineering best practices (testing, code reviews, clean code)</li>
+                            <li>✓ Experience with REST API intregation</li>
+                            <li>✓ Comfortable working in a fast-paced, dynamic environment</li>
+                            <li>✓ Guide teams to build scalable font-end system </li>
+                            <li>✓ Coach engineers on best practices for writing maintainable code and system</li>
+                           </ul>
                             <p>I have knowledge about Data structures and Algorithms.I solved over 200 problems in <a
                                     href="https://uhunt.onlinejudge.org/id/611948" target="_blank">UVa</a>,<a
                                     href="https://codeforces.com/profile/Nawaz_Shorif" target="_blank">codeforces</a>,<a
                                     href="http://lightoj.com" target="_blank">LightOj</a> and others Online Judge.</p>
+                                   <p> <b>Note:</b>  I want to utilize my skills to accomplish the challenging position in the Software Industry and fulfilling organizational goals.</p>
 
                         </div>
                         <!--//content-->
@@ -425,8 +438,7 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Dhaka,
-                                    Bangladesh</li>
+                                <li> <a style="display: flex; align-items: start;" href="https://goo.gl/maps/QsVkjYTFKA3jhixB7" target="blank"><i class="fa fa-map-marker"></i><span> 2-3-23-401 Nijigaoka, <br /> Kanagawa, Japan (215-0015) </span> </a></li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                         href="mailto:mr.nawaz.cse.ruet@gmail.com">nawaz.cse.ruet@gmail.com</a></li>
                                 <!--<li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>-->
@@ -465,11 +477,18 @@
                                     <!--//level-bar-->
                                 </div>
                                 <!--//item-->
-
+                                <div class="item">
+                                    <h3 class="level-title">AWS(EC2,lambda,redis,SQS,SNS,S3,CI/CD etc)<span class="level-label"></span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="80%">
+                                        </div>
+                                    </div>
+                                    <!--//level-bar-->
+                                </div>
                                 <!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">HTML5, CSS3, Bootstrap<span class="level-label"></span></h3>
+                                    <h3 class="level-title">HTML5, SCSS, CSS3, Bootstrap<span class="level-label"></span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="88%">
                                         </div>
@@ -488,7 +507,7 @@
                                 </div>
                                 <!--//item-->
 
-                                <p><a class="more-link" href="https://www.linkedin.com/in/md-nawaz-shorif-4b0b97b2/"
+                                <p><a class="more-link" href="https://www.linkedin.com/in/nawazcse/"
                                         target="_blank"><i class="fa fa-external-link"></i> More on Linkedin</a></p>
                             </div>
                         </div>
