--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     href="https://uhunt.onlinejudge.org/id/611948" target="_blank">UVa</a>,<a
                                     href="https://codeforces.com/profile/Nawaz_Shorif" target="_blank">codeforces</a>,<a
                                     href="http://lightoj.com" target="_blank">LightOj</a> and others Online Judge.</p>
-                                   <p> <b>Note:</b>  I want to utilize my skills to accomplish the challenging position in the Software Industry and fulfilling organizational goals.</p>
+                            <p> <b>Note:</b>  I want to utilize my skills to accomplish the challenging position in the Software Industry and fulfilling organizational goals.</p>
 
                         </div>
                         <!--//content-->
@@ -438,7 +438,7 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li> <a style="display: flex; align-items: start;" href="https://goo.gl/maps/QsVkjYTFKA3jhixB7" target="blank"><i class="fa fa-map-marker"></i><span> 2-3-23-401 Nijigaoka, <br /> Kanagawa, Japan (215-0015) </span> </a></li>
+                                <li> <a style="display: flex; align-items: start;" href="https://goo.gl/maps/QsVkjYTFKA3jhixB7" target="_blank"><i class="fa fa-map-marker"></i><span> 2-3-23-401 Nijigaoka, <br /> Kanagawa, Japan (215-0015) </span> </a></li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                         href="mailto:mr.nawaz.cse.ruet@gmail.com">nawaz.cse.ruet@gmail.com</a></li>
                                 <!--<li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>-->
@@ -455,7 +455,7 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                                I am Full Stack Developer.I can also work in PHP and MySQL</p>
+                                I am Full Stack Developer.I can also work in PHP, java & MySQL</p>
                             <div class="skillset">
 
                                 <div class="item">
